--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,1 +1,1 @@
-# Dockerfile.backendFROM golang:1.24.5WORKDIR /appCOPY . .RUN go mod downloadRUN go build -o main .EXPOSE 3000CMD ["./main"]
+FROM golang:1.24.5 AS builderWORKDIR /appCOPY . .RUN go mod downloadRUN go build -o main .FROM alpine:latestWORKDIR /appCOPY --from=builder /app/main .EXPOSE 3000CMD ["./main"]
