--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,1 +1,1 @@
-# Dockerfile.frontendFROM node:18WORKDIR /appCOPY package*.json ./RUN npm installCOPY . .EXPOSE 3000CMD ["npm", "start"]
+FROM node:18WORKDIR /appCOPY frontend/package*.json ./RUN npm installCOPY frontend/ .EXPOSE 3000CMD ["npm", "start"]
